content: pridana paticka, fix preklepy

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,6 +52,8 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
             {{ content }}
           </main>
+
+          {% include footer.html %}
         </div>
       </div>
     </div>
