--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,12 @@
 <footer class="footer">
-  
+  <div class="footer__left">
+    <p class="footer__link">
+      <a href="https://www.justice.cz">Domovská stránka justice.cz</a>
+    </p>
+  </div>
+  <div class="footer__right">
+    <p class="footer__link">
+      <a href="https://github.com/MinistryOfJusticeCZ/technicke-pokyny/issues">Issueboard na GitHubu</a>
+    </p>
+  </div>  
 </footer>
